# pablozunigac.github.io

./: .gitignore  Makefile  READ.md  README.md  _config.yml  index.md  install.R  install.py  pyproject.toml  resume.md
.github/workflows/: actualizar-fecha  actualizar-fecha.yml  update-date.yml
